Brought back contextual menus in quiz-listing

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -1,25 +1,6 @@
 
-%ul.dropdown-menu.dropdown-inverse#quiz-action-menu{ :role => :menu,
+%ul.dropdown-menu.dropdown-inverse#per-quiz{ :role => :menu,
 'data-update-on' => 'quiz/preview quizzes/list'}
-  %li.nav-header= "Show"
-  %li.dropdown-submenu
-    %a{ :href => '#', 'data-toggle' => :dropdown }= "By Recency"
-    %ul.dropdown-menu
-      %li
-        %a{ :href => '#' }= "Oldest first"
-      %li
-        %a{ :href => '#' }= "Newest first"
-  %li.dropdown-submenu
-    %a{ :href => '#', 'data-toggle' => :dropdown }= "By Grade / Class"
-    %ul.dropdown-menu
-      %li
-        %a{ :href => '#' }= "Grade 9"
-      %li
-        %a{ :href => '#' }= "Grade 10"
-      %li
-        %a{ :href => '#' }= "Grade 11"
-      %li
-        %a{ :href => '#' }= "Grade 12"
   %li.nav-header= "Worksheets"
   %li
     %a{ :href => '#' }= "New"
