--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -24,9 +24,10 @@
     = render :partial => 'toolbox/inline_error'
     = render :partial => 'toolbox/swiss_knife'
 
-    = render :partial => 'menus/teacher/quiz_filter'
     = render :partial => 'toolbox/line'
     = render :partial => 'toolbox/preview'
+    = render :partial => 'menus/teacher/quiz_filter'
+    = render :partial => 'menus/teacher/per-quiz'
 
     #flot-chart
 
@@ -67,6 +68,7 @@
                   = render :partial => 'menus/user/account'
       #desktop.row-fluid
         #lp.g-panel.span4
+          = render :partial => 'toolbox/paginator', :locals => { :id => 'lp-paginator', :url => '#' }
           #lp-quiz-lst
             = render :partial => 'teachers/quiz-lst'
           #lp-sektion-lst
