Enhanced helper method simple_link
The method now creates data-* attributes for everything other than
:href, :id and :class

Example: simple_link :for => "Download", :a => 'a/b', :id => 'lnk-download'
would give

<a id='lnk-download' data-a='a/b'>Download</a>

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -3,10 +3,11 @@
 'data-update-on' => 'quiz/preview quizzes/list'}
   %li.nav-header= "Worksheets"
   %li
-    %a{ :href => '#' }= "New"
+    = simple_link :for => "New"
   %li
     %a{ :href => '#' }= "Till Now"
   %li
-    = simple_link :base_url => "#{Gutenberg['server']}/atm/:a/answer-key/downloads/answer-key.pdf", 
-    :update_on => "quiz/preview", :as => "Download Solution"
+    = simple_link :for => "Download Solution", 
+    :url => "#{Gutenberg['server']}/atm/:a/answer-key/downloads/answer-key.pdf", 
+    :update_on => "quiz/preview"
             
