--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -70,10 +70,7 @@
         #lp.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'lp-paginator', :url => '#' }
           #lp-worksheet-builder
-            -#= render :partial => 'teachers/quiz-lst'
-            = render :partial => 'teachers/worksheet-builder'
-          #lp-sektion-lst
-          #lp-student-lst
+            = render :partial => 'teachers/worksheet-builder', :locals => { :teacher => tchr }
         #wp.g-panel.span8
 
     = yield :toolbox
