Temp adding a hero-unit. Will come back to it

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,3 +32,5 @@
                         %input.input-small{ :type => :password, :name => "account[password]", :placeholder => "Password" }
                         %button.btn.btn-primary{ :type => :submit }= "Sign In"
                         %button#btn-register.btn{ :type => :button }= "Register"
+      .hero-unit
+
