--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,6 +31,6 @@
                       .input-append
                         %input.input-small{ :type => :password, :name => "account[password]", :placeholder => "Password" }
                         %button.btn.btn-primary{ :type => :submit }= "Sign In"
-                        %button#btn-register.btn{ :type => :button }= "Register"
+                        %button#btn-register.btn.white-bg{ :type => :button }= "Register"
       .hero-unit
 
