.single-line now has a checkbox that is checked/unchecked ..
.. as the .single-line is clicked / unclicked

However, if the single-line is within a .multi-select, then multiple
.single-lines can be clicked at the same time

--- a/app/views/teachers/_worksheet-builder.html.haml
+++ b/app/views/teachers/_worksheet-builder.html.haml
@@ -12,6 +12,7 @@
   #lp-quizzes.tab-pane
   #lp-sektions.tab-pane
     .tabbable.tabs-left
-      = render :partial => 'teachers/students-and-sektions', :locals => { :teacher => teacher }
+      = render :partial => 'teachers/sektions-tab', :locals => { :teacher => teacher }
   #lp-wrksheet-build-summary.tab-pane
+
     
