--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -14,5 +14,6 @@
   .row-fluid.span10
     .span9.text
       .row-fluid
+      = check_box_tag :tbd, :t, false, :class => :hide
     .span3.subtext
       .row-fluid
