[Teacher]: Wrap student list - grouped by sektion - within a form ..
.. so that when the <form> is submitted, so are the IDs of the students
for whom the worksheet needs to be made

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -113,6 +113,10 @@ $lightblue: lighten($deep-blue, 23%) ;
 
 .tab-content { 
   min-height: 200px ;
+  > form { 
+    display: none ;
+    &.active { display: block ; }
+  } 
 }  
 
 .single-line {
