Allowing on-the-fly attachment / detachment of content in .tab-panel
the content has to be be present in the #toolbox and should be the kind
that one foresees as re-usable in different contexts

Example: The sektions list is sth that can be used both during
worksheet building and when reports are seen. Rather then render it
in multiple times, render it once and clone it as needed

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -28,6 +28,7 @@
     = render :partial => 'toolbox/preview'
     = render :partial => 'menus/teacher/quiz_filter'
     = render :partial => 'menus/teacher/per-quiz'
+    = render :partial => 'teachers/sektions-tab', :locals => { :teacher => tchr }
 
     #flot-chart
 
