--- a/app/views/teachers/_sektions-tab.html.haml
+++ b/app/views/teachers/_sektions-tab.html.haml
@@ -1,27 +1,15 @@
 
--# Dropdown split-button 
-.navbar.navbar-inverse
-  .navbar-inner
-    .btn-group.pull-right
-      %button.btn.white-bg#select-all-for-quiz= "Select All"
-      %button.btn.dropdown-toggle.white-bg{ 'data-toggle' => :dropdown, :menu => "#bakras", :fixed => :true }
-        %span.caret
-      %ul.dropdown-menu#bakras
-        %li
-          = simple_link :for => "Unselect All", :id => 'unselect-all-for-quiz'
-        %li
-          = simple_link :for => "Build Worksheet", :id => 'build-worksheet'
-
 -# Left-side tabs - one per section
-%ul.nav.nav-tabs.span4
-  - teacher.sektions.each do |m|
-    %li
-      = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
-      :href => "#lp-sektion-#{m.id}", :ajax => "sektion/students.json?id=#{m.id}"
+#sektions-tab.tabbable.tabs-left
+  %ul.nav.nav-tabs.span4
+    - teacher.sektions.each do |m|
+      %li
+        = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
+        :href => "#lp-sektion-#{m.id}", :ajax => "sektion/students.json?id=#{m.id}"
 
--# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
-.tab-content.span7
-  - teacher.sektions.each do |m|
-    = simple_form_for :checked, :url => quiz_assign_path, :html => { :id => "lp-sektion-#{m.id}" } do |f|
-      .tab-pane.multi-select{ :id => "lp-sektion-#{m.id}" }
+  -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
+  .tab-content.span7
+    - teacher.sektions.each do |m|
+      = simple_form_for :checked, :url => quiz_assign_path, :html => { :id => "lp-sektion-#{m.id}" } do |f|
+        .tab-pane.multi-select
 
