--- a/app/views/teachers/_worksheet-builder.html.haml
+++ b/app/views/teachers/_worksheet-builder.html.haml
@@ -4,15 +4,14 @@
   %li
     = simple_link :for => "Quizzes", :toggle => :tab, :href => "#lp-quizzes", :ajax => "quizzes/list.json"
   %li
-    = simple_link :for => "Sections", :toggle => :tab, :href => "#lp-sektions"
+    = simple_link :for => "Sections", :toggle => :tab, :href => "#lp-sektions", :attach => "#sektions-tab"
   %li
     = simple_link :for => "Summary", :toggle => :tab, :href => "#lp-wrksheet-build-summary"
 
 .tab-content
   #lp-quizzes.tab-pane
   #lp-sektions.tab-pane
-    .tabbable.tabs-left
-      = render :partial => 'teachers/sektions-tab', :locals => { :teacher => teacher }
+    = render :partial => 'menus/teacher/worksheet-build'
   #lp-wrksheet-build-summary.tab-pane
 
     
