Dont blindly empty out something. Leave .dont-touch children alone

--- a/app/views/menus/teacher/_worksheet-build.html.haml
+++ b/app/views/menus/teacher/_worksheet-build.html.haml
@@ -1,6 +1,6 @@
 
 -# Dropdown split-button 
-.navbar.navbar-inverse
+.navbar.navbar-inverse.dont-touch
   .navbar-inner
     .btn-group.pull-right
       %button.btn.white-bg#select-all-for-quiz= "Select All"
