Changed styling for selected .single-lines
Rather than underline, we now simply color the left-border

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -139,7 +139,7 @@ $lightblue: lighten($deep-blue, 23%) ;
   } 
   &.selected {
     > .dropdown { > a { color: white ; } }
-    border-bottom: 2px solid $orange ;
+    border-left: 2px solid $orange ;
   } 
 
   > .dropdown { 
