--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -7,11 +7,11 @@
 
 -# A single line entry - with mandatory text and optional subtext 
 .row-fluid.single-line
-  .dropdown.span2
+  .dropdown.span2.offset1
     %a.dropdown-toggle{ :href => '#', 'data-toggle' => :dropdown, :up => 2 }
       More ...
       %span.caret
-  .row-fluid.span10
+  .row-fluid.span9
     .span9.text
       .row-fluid
       = check_box_tag :tbd, :t, false, :class => :hide
