Clicking on 'New worksheet' in contextual menu should
.. activate the next tab in #lp-worksheet-builder

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -3,7 +3,7 @@
 'data-update-on' => 'quiz/preview quizzes/list'}
   %li.nav-header= "Worksheets"
   %li
-    = simple_link :for => "New"
+    = simple_link :for => "New", :next_tab => 1
   %li
     %a{ :href => '#' }= "Till Now"
   %li
