Rendering control-panel dropdown links using simple_link

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -75,7 +75,7 @@ $lightblue: lighten($deep-blue, 23%) ;
   } 
 } 
 
-#logout-link { color: $orange ; }
+#lnk-logout{ color: $orange ; }
 #account-ops {
   background: $deep-blue ;
   float: right ;
