Wrapper over preview carousel

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -155,7 +155,7 @@ $lightblue: lighten($deep-blue, 23%) ;
   } 
 } 
 
-#wp > #preview { 
+#preview > #preview-carousel { 
   min-height: 300px ;
   > .carousel-inner { 
     text-align: center ;
