--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -73,6 +73,7 @@
           #lp-worksheet-builder
             = render :partial => 'teachers/worksheet-builder', :locals => { :teacher => tchr }
         #wp.g-panel.span8
+          #preview
 
     = yield :toolbox
     -#= render :partial => 'accounts/update'
