--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -1,6 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#per-quiz{ :role => :menu,
-'data-update-on' => 'quiz/preview quizzes/list'}
+'data-update-on' => 'quiz/preview'}
   %li.nav-header= "Worksheets"
   %li
     = simple_link :for => "New", :next_tab => 1
