--- a/app/views/toolbox/_paginator.html.haml
+++ b/app/views/toolbox/_paginator.html.haml
@@ -1,7 +1,7 @@
 
 -# url & id are variables from the calling view
 
-.pagination.offset1{ :id => id }
+.pagination.offset1.notouch{ :id => id }
   %ul
     - for pg in [*1..6]
       %li
