New - fuller - names used in the code. Example: #wp is now #wide

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -155,7 +155,7 @@ $lightblue: lighten($deep-blue, 23%) ;
   } 
 } 
 
-#preview > #preview-carousel { 
+#wide-X > #wide-X-carousel { 
   min-height: 300px ;
   > .carousel-inner { 
     text-align: center ;
