--- a/app/views/menus/teacher/_quiz_main.html.haml
+++ b/app/views/menus/teacher/_quiz_main.html.haml
@@ -5,7 +5,7 @@
   %li.nav-header= "quiz"
   %li
     = simple_link :for => "New Quiz", :id => "lnk-new-quiz"
-    = simple_link :for => "Existing Quizzes", :id => "lnk-existing-quiz", :default_lnk => :true
+    = simple_link :for => "Existing Quizzes", :id => "lnk-existing-quiz"
   %li.divider
   %li.nav-header= "Suggest Questions"
   %li
