Close menu when link selected
Also, defined a new link to initiate new worksheet build

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -3,7 +3,7 @@
 'data-update-on' => 'quiz/preview'}
   %li.nav-header= "Worksheets"
   %li
-    = simple_link :for => "New", :next_tab => 1
+    = simple_link :for => "New", :id => 'lnk-wsb-new'
   %li
     %a{ :href => '#' }= "Till Now"
   %li
