Prelim changes for building a new quiz
JS needs to be defined still for the whole process

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -221,3 +221,13 @@ button[data-toggle='button'] {
 .transparent { 
   background: transparent ;
 } 
+
+#wait {
+  height: 400px ;
+  text-align: center ;
+  > h1 {
+    margin-top: 40% ;
+    font-weight: 300 ;
+    font-size: 50px ;
+  } 
+}
