four (4) classes used to control what is removed, re-loaded and purged
1. no-remove => node on which it is set will not be removed with
  karo.empty is called on the parent

2. writeonce: Usually set on .tab-panes. If set then => JSON will be
  written just one within the .tab-pane. Subsequent JSON from the same
  request will not be re-written

3. purge: If set, then the node will be empty()-ed. Whether the node
  itself is removed entirely or not depends on whether it - or its parent -
  has .no-remove set on it

4. nopurge-on-show: Set on .nav-tabs. Blocks the default action of purging
  previous tab-pane when switching to new tab

--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -1,6 +1,6 @@
 
 -# Left-side tabs - one per section
-#sektions-tab.tabbable.tabs-left.notouch
+#sektions-tab.tabbable.tabs-left.no-remove
   %ul.nav.nav-tabs.span3
     - teacher.sektions.each do |m|
       %li
@@ -9,7 +9,7 @@
 
   -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
   .tab-content.span8
-    .btn-group.notouch
+    .btn-group.no-remove
       %button.btn.btn-inverse#select-all-for-quiz= "Select All"
       %button.btn.btn-inverse#build-worksheet= "Build Worksheet"
     - teacher.sektions.each do |m|
