Enclosing <form> in qzb should be a 'no-remove'

--- a/app/views/teachers/_qzb-topics.html.haml
+++ b/app/views/teachers/_qzb-topics.html.haml
@@ -2,7 +2,7 @@
 -# Left-side tabs - one per vertical
 
 = simple_form_for :checked, :remote => true, 
-  :html => { :id => 'form-qzb-topics', 'data-action' => "#{course_questions_path}?id=:prev" } do |f|
+  :html => { :id => 'form-qzb-topics', :class => 'no-remove', 'data-action' => "#{course_questions_path}?id=:prev" } do |f|
 
   .row-fluid.navbar
     = f.button :submit, :class => 'btn-inverse pull-right', :value => "Show Questions"
