Placeholder text for quiz-name input box

--- a/app/views/teachers/_qzb.html.haml
+++ b/app/views/teachers/_qzb.html.haml
@@ -20,7 +20,7 @@
 
       .row-fluid.navbar.no-touch
         .input-append.pull-right.span10
-          = f.input_field :name, :class => "span8"
+          = f.input_field :name, :class => "span8", :placeholder => "Name the Quiz"
           %button.btn.btn-inverse{ :type => :submit }= "Build Quiz"
       #qzb-questions.purge.no-remove
 
