[Teacher console]: Changes in console that follow from rendering dropdowns ..
.. using simple_link helper method

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -76,7 +76,7 @@ $lightblue: lighten($deep-blue, 23%) ;
 } 
 
 #lnk-logout{ color: $orange ; }
-#account-ops {
+#m-account {
   background: $deep-blue ;
   float: right ;
   margin-top: 5px ;
