(onclick.yml) - Defined roles & scopes for :url and :ajax more sharply
Most links in our app issue an AJAX request. But some - like download and logout links -
behave as normal HTML links.

To distinguish between AJAX and non-AJAX links, simply specify 'ajax : disabled' for
the latter.

:url can be specified for both. For AJAX links, it will form the basis
of what request is sent. For others, it will become the :href

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -4,7 +4,7 @@
   %li
     = simple_link :for => "Make New", :id => 'lnk-wsb-new'
   %li
-    = simple_link :for => "See Existing", :id => 'lnk-wsb-existing', :url => "quiz/testpapers?id=:a"
+    = simple_link :for => "See Existing", :id => 'lnk-wsb-existing'
   %li
     = simple_link :for => "Download Solution", :id => 'lnk-download-solution', 
     :url => "#{Gutenberg['server']}/atm/:a/answer-key/downloads/answer-key.pdf"
