List worksheets for a given quiz

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -66,6 +66,8 @@
           #left-X
           #left-2
             = render :partial => 'teachers/qzb', :locals => { :teacher => tchr }
+          #left-3
+            = render :partial => 'teachers/wsl'
         #middle.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-X
