Needed to change :ajax => :url here

--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -5,7 +5,7 @@
     - teacher.sektions.each do |m|
       %li
         = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
-        :href => "#lp-sektion-#{m.id}", :ajax => "sektion/students.json?id=#{m.id}"
+        :href => "#lp-sektion-#{m.id}", :url => "sektion/students.json?id=#{m.id}"
 
   -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
   .tab-content.span8
