Contextual menu for worksheets added

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -26,6 +26,7 @@
     = render :partial => 'toolbox/preview'
     = render :partial => 'menus/teacher/quiz_filter'
     = render :partial => 'menus/teacher/per-quiz'
+    = render :partial => 'menus/teacher/per-ws'
     = render :partial => 'menus/teacher/quiz_main', :locals => { :teacher => tchr, :server => srvr }
     = render :partial => 'menus/user/account'
 
