minor edit to layout

--- a/app/views/menus/teacher/_per-quiz.html.haml
+++ b/app/views/menus/teacher/_per-quiz.html.haml
@@ -5,7 +5,8 @@
     = simple_link :for => "Make New", :id => 'lnk-wsb-new'
   %li
     = simple_link :for => "See Existing", :id => 'lnk-wsb-existing'
+  %li.nav-header= "Download"
   %li
-    = simple_link :for => "Download Solution", :id => 'lnk-download-solution', 
+    = simple_link :for => "Solution", :id => 'lnk-download-solution', 
     :url => "#{Gutenberg['server']}/atm/:a/answer-key/downloads/answer-key.pdf"
             
