As for menus - a separate folder to house modals created

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -17,6 +17,10 @@
     = render :partial => 'menus/teacher/quiz_main', :locals => { :teacher => tchr, :server => srvr }
     = render :partial => 'menus/user/account'
 
+  -# #modals by itself is not hidden. But the modal partials within it are by themselves 
+  #modals
+    = render :partial => 'modals/user/account'
+
 
 !!!5
 
