--- a/app/views/menus/user/_account.html.haml
+++ b/app/views/menus/user/_account.html.haml
@@ -3,6 +3,5 @@
   %li
     = simple_link :for => "Logout", :id => 'lnk-logout', :href => logout_path
   %li
-    = simple_link :for => "Change Password", :toggle => :modal, :id => 'lnk-change-password'
-  %li
-    = simple_link :for => "Change Email", :toggle => :modal, :id => 'lnk-change-password'
+    = simple_link :for => "Change Password", :href => '#b-edit-password', :id => 'lnk-change-password'
+
