Added bootstrap carousel to toolbox

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -7,6 +7,7 @@
   #toolbox.hidden 
     = render :partial => 'students/worksheets'
     = render :partial => 'toolbox/line'
+    = render :partial => 'toolbox/preview'
     = render :partial => 'menus/user/account'
     = render :partial => 'students/trigger'
 
