[student]: Groundwork laid for showing feedback in student console

--- a/app/views/students/_ws.html.haml
+++ b/app/views/students/_ws.html.haml
@@ -5,5 +5,6 @@
   %li
     = simple_link :for => "Feedback", :id => 'tab-st-feedback', :href => "#pane-st-feedback"
 
-#pane-st-quizzes.tab-pane
-#pane-st-feedback.tab-pane
+.tab-content
+  #pane-st-quizzes.tab-pane
+  #pane-st-feedback.tab-pane
