--- a/app/views/menus/teacher/_per-ws.html.haml
+++ b/app/views/menus/teacher/_per-ws.html.haml
@@ -1,8 +1,5 @@
 
 %ul.dropdown-menu.dropdown-inverse#per-ws{ :role => :menu }
   %li
-    = simple_link :for => "Download", :id => 'lnk-ws-download',
+    = simple_link :for => "Download PDF", :id => 'lnk-ws-download',
     :url => "#{Gutenberg['server']}/atm/:a/:b/downloads/assignment-:c-:b.pdf"
-  %li.nav-header= "Statistics"
-  %li
-    = simple_link :for => "See Existing", :id => 'lnk-wsb-existing'
